--- a/mywork/vibrator.html
+++ b/mywork/vibrator.html
@@ -10,8 +10,7 @@
 <body>
     <p>Hey how ya doin?</p>
     <script>
-        const p = document.querySelector('p');
-        console.log(p);
+        window.navigator.vibrate([200,100,200,100,200,100,300,100,500]); //vibrate
     </script>
 </body>
 </html>
