changed to navigator.vibrate

--- a/mywork/vibrator.html
+++ b/mywork/vibrator.html
@@ -9,7 +9,7 @@
 <body>
     <p>Hey how ya doin?</p>
     <script>
-        window.navigator.vibrate([200,100,200,100,200,100,300,100,500]); //vibrate
+        navigator.vibrate([200,100,200,100,200,100,300,100,500]); //vibrate
     </script>
 </body>
 </html>
